[package]
name = "kfst-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kfst_rs"
crate-type = ["cdylib", "lib"]

[dependencies]
im = "15.1.0"
indexmap = "2.9.0"
lzma-rs = "0.3.0"
nom = "8.0.0"
pyo3 = { version = "0.24.0", features = ["indexmap", "abi3-py311"], optional = true}

[features]
python = ["dep:pyo3"]
default = []