[package]
name = "kfst-rs"
version = "0.1.4"
edition = "2021"
authors = ["Théo Salmenkivi-Friberg <theo.friberg@helsinki.fi>", "Iikka Hauhio <iikka.hauhio@helsinki.fi>"]
license = "LGPL-3.0-or-later"
description = "Fast and portable HFST-compatible finite-state transducers."
repository = "https://github.com/fergusq/fst-python"
readme = "README.md"
keywords = ["finnish", "nlp", "morphology", "transducers", "fst"]
categories = ["text-processing", "algorithms", "data-structures", "parser-implementations", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kfst_rs"
crate-type = ["cdylib", "lib"]

[dependencies]
im = "15.1.0"
indexmap = "2.9.0"
lzma-rs = "0.3.0"
nom = "8.0.0"
pyo3 = { version = "0.24.0", features = ["indexmap", "abi3-py311", "generate-import-lib"], optional = true}
readonly = "0.2.13"

[features]
python = ["dep:pyo3"]
default = []
