[metadata]
name = kfst
version = 4.0.0
author = Iikka Hauhio
author_email = iikka.hauhio@helsinki.fi
description = A pure-python finite state transducer library
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv3 or later
license_files =
	LICENSE
url = https://github.com/fergusq/fst-python
project_urls =
    Bug Tracker = https://github.com/fergusq/fst-python/issues
classifiers =
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages =
	kfst
	kfst.python_impl
	kfst.python_impl.format
python_requires = >=3.8
install_requires =
	immutables
