[metadata]
name = pyomorfi
version = 1.0.1
author = Iikka Hauhio
author_email = iikka.hauhio@helsinki.fi
description = A pure-python implementation of the Omorfi library that provides Finnish morphological analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finnish nlp morphology
license = GNU GPLv3
license_files =
    LICENSE
url = https://github.com/fergusq/fst-python
project_urls =
    Bug Tracker = https://github.com/fergusq/fst-python/issues
classifiers =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages =
    pyomorfi
    pyomorfi.omorfi
    pyomorfi.omorfi.disamparsulate
    pyomorfi.omorfi.entryguessing
    pyomorfi.omorfi.formats
python_requires = >=3.8
install_requires =
	kfst

[options.package_data]
pyomorfi = *.kfst