[metadata]
name = pypykko
version = 0.3.0
author = Théo Salmenkivi-Friberg
author_email = theo.friberg@helsinki.f
description = A pure-python wrapper for the pykko Finnish morphological analyser and inflector
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finnish nlp morphology
license = MIT
license_files =
    LICENSE
url = https://github.com/fergusq/fst-python
project_urls =
    Bug Tracker = https://github.com/fergusq/fst-python/issues
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages =
    pypykko
python_requires = >=3.8
install_requires =
	kfst >= 4.3.3-beta

[options.package_data]
pypykko =
    *.kfst
    *.tsv
