[metadata]
name = pyvoikko
version = 0.1
author = Iikka Hauhio
author_email = iikka.hauhio@helsinki.fi
description = A pure-python implementation of the Voikko library that provides Finnish morphological analysis
long_description = file: README.md, LICENSE
license = GNU GPLv3+
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = pyvoikko
python_requires = >=3.9
install_requires =
	kfst

[options.package_data]
pyvoikko = *.kfst